--- a/xml-and-js-main/module-05/customers.html
+++ b/xml-and-js-main/module-05/customers.html
@@ -1,28 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <p id="text"></p>
-    <script>
-        const xhhtp = new XMLHttpRequest();
-        xhhtp.onreadystatechange = function() {
-            if(this.readyState == 4 && this.status == 200) {
-                displayData(this);
+    <body>
+        <ol id="customer"></ol>
+        <script>
+            const xhttp = new XMLHttpRequest();
+            xhttp.onreadystatechange = function () 
+            {
+                if (this.readyState == 4 && this.status == 200) 
+                {
+                    displayData(this.responseXML);
+                }
+            };
+
+            xhttp.open("GET", "..//customers.xml", true);
+            xhttp.send();
+
+            function stringToNode(html) 
+            {
+                const template = document.createElement(`template`);
+                html = html.trim();
+                template.innerHTML = html;
+                return template.content.firstChild;
             }
-        };
 
-        xhhtp.open("GET" , "customers.xml" , true);
-        xhhtp.send();
+            function displayData(xmlDoc) 
+            {
+                const listElement = document.getElementById(`customers`);
+                const userNodes = xmlDoc.getElementsByTagName(`customer`);
 
-        function displayData(xml) {
-            const xmlDoc = xml.responseXML;
-            document.getElementById("text").innerHTML = xmlDoc.getElementByTagName("name")[0].childNodes[0];
-        }
-    </script>
-</body>
+                for (let index = 0; index < userNodes.length; index++) 
+                {
+                    const userNode = userNodes[index];
+                    console.log(userNode.getElementsByTagName(`order`))
+                    const listItem = stringToNode(`<li>
+                    <h2>${
+                    userNode.getElementsByTagName(`name`)[0].attributes[0].nodeValue
+                    } 
+                    ${
+                    userNode.getElementsByTagName(`name`)[0].childNodes[0].nodeValue
+                    }</h2>
+
+                    <p> Address: ${userNode.getElementsByTagName(`address`)[0].childNodes[0].nodeValue} </p>
+                    <p> phoneNumber: ${userNode.getElementsByTagName(`phone`)[0].childNodes[0].nodeValue} </p>
+                    <p>${`Email: ${
+                        userNode.getElementsByTagName(`email`)[0] ? userNode.getElementsByTagName(`email`)[0].childNodes[0].nodeValue : ""
+                    }`}</p>
+                    
+                    <ol id="${userNode.getAttribute('custID')}"> <h4> Order Items </h4> </ol> 
+                    </li>`);
+
+                    listElement.appendChild(listItem);
+                }
+                displayOrderData(xmlDoc)
+            }
+      
+            function displayOrderData(xmlDoc) 
+            {
+                const orderNodes = xmlDoc.getElementsByTagName(`order`);
+                for (let index = 0; index < orderNodes.length; index++) 
+                {
+                    const orderNode = orderNodes[index];
+                    console.log(orderNode.getElementsByTagName(`items`)[0].children[0].getElementsByTagName('itemPrice')[0].childNodes[0].nodeValue)
+                    const orderElement = document.getElementById(`${ orderNode.getAttribute('orderBy')}`);
+                    const orderItems = stringToNode(`
+                    <li>
+                    <p> OrderDate: ${orderNode.getElementsByTagName(`orderDate`)[0].childNodes[0].nodeValue} </p>
+                    <p> itemPrice: ${orderNode.getElementsByTagName(`items`)[0].children[0].getElementsByTagName('itemPrice')[0].childNodes[0].nodeValue} </p>
+                    <p> itemQty: ${orderNode.getElementsByTagName(`items`)[0].children[0].getElementsByTagName('itemQty')[0].childNodes[0].nodeValue} </p>
+                    </li>`);
+                    orderElement.appendChild(orderItems);
+                }
+            }
+        </script>
+    </body>
 </html>
