--- a/module-09/assignments/customers_fetch.html
+++ b/module-09/assignments/customers_fetch.html
@@ -2,6 +2,6 @@
 <html lang="en">
     <body>
         <ol id="cust"></ol>
-        <script src="./customers_promisified.js"></script>
+        <script src="./customers_fetch.js"></script>
      </body>
 </html>
