complete activity & assignment 11

--- a/module-11/assignments/index.html
+++ b/module-11/assignments/index.html
@@ -12,6 +12,10 @@
         <label for="genre_name">Filter genres</label>
         <input type="text" name="genre_name" placeholder="Enter genere">
         <button type="submit">Apply filters</button>
+        <input type="radio" id="withPL" name="radio_button_value" value="withPL">
+           <label for="withPL">Display with playlist</label><br>
+        <input type="radio" id="withoutPL" name="radio_button_value" value="withoutPL">
+           <label for="withoutPL">Display without playlist</label><br>
       </form>
       <div id="genres"></div>
       <div id="tracks"></div>
